<?xml version="1.0" encoding="utf-8"?>
<!-- Darren Stults -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.services.ServicesFragment">

    <Button
        android:id="@+id/logout_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/ic_robot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_login_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/label_login_name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/profile_login_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="urpname"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_display_name"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/label_display_name"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/profile_display_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Your P. Name"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_birthdate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/label_birthdate"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/profile_birthdate"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="10/24/1995"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/label_phone1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/label_phone1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/profile_phone1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="+425-444-4444"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/label_phone2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/label_phone2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/profile_phone2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/empty_string_value"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/label_email"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/label_email"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="+425-444-4444"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>