<?xml version="1.0" encoding="utf-8"?>
<!-- Darren Stults -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appointment_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/appointment_day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="viewEnd"
            android:textColor="@color/faded_orange"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appointment_id"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/label_id"
            app:layout_constraintStart_toEndOf="@+id/label_id"
            app:layout_constraintTop_toTopOf="@+id/label_id" />

        <TextView
            android:id="@+id/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/label_date"
            app:layout_constraintBottom_toBottomOf="@+id/appointment_id"
            app:layout_constraintStart_toEndOf="@+id/appointment_id"
            app:layout_constraintTop_toTopOf="@+id/appointment_id" />

        <TextView
            android:id="@+id/appointment_date"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/label_date"
            app:layout_constraintStart_toEndOf="@+id/label_date"
            app:layout_constraintTop_toTopOf="@+id/label_date" />

        <TextView
            android:id="@+id/label_time"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/label_from"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="@+id/label_date"
            app:layout_constraintStart_toEndOf="@+id/appointment_date"
            app:layout_constraintTop_toTopOf="@+id/label_date"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/appointment_start"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/label_time"
            app:layout_constraintStart_toEndOf="@+id/label_time"
            app:layout_constraintTop_toTopOf="@+id/label_time" />

        <TextView
            android:id="@+id/label_end"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/label_to"
            android:textAlignment="viewEnd"
            app:layout_constraintEnd_toEndOf="@+id/label_time"
            app:layout_constraintStart_toStartOf="@+id/label_time"
            app:layout_constraintTop_toBottomOf="@+id/label_time" />

        <TextView
            android:id="@+id/appointment_end"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/label_end"
            app:layout_constraintEnd_toEndOf="@+id/appointment_start"
            app:layout_constraintStart_toEndOf="@+id/label_end"
            app:layout_constraintTop_toTopOf="@+id/label_end" />

        <TextView
            android:id="@+id/label_student"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:text="@string/label_student"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/appointment_student"
            app:layout_constraintEnd_toEndOf="@+id/appointment_date"
            app:layout_constraintStart_toStartOf="@+id/label_date"
            app:layout_constraintTop_toTopOf="@+id/appointment_student" />

        <TextView
            android:id="@+id/appointment_student"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/appointment_end"
            app:layout_constraintStart_toStartOf="@+id/label_end"
            app:layout_constraintTop_toBottomOf="@+id/appointment_end" />

        <TextView
            android:id="@+id/label_instructor"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:text="@string/label_instructor"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/appointment_instructor"
            app:layout_constraintEnd_toEndOf="@+id/appointment_date"
            app:layout_constraintStart_toStartOf="@+id/label_date"
            app:layout_constraintTop_toTopOf="@+id/appointment_instructor"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/appointment_instructor"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/appointment_student"
            app:layout_constraintStart_toStartOf="@+id/appointment_student"
            app:layout_constraintTop_toBottomOf="@+id/appointment_student" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>