<?xml version="1.0" encoding="utf-8"?>
<!-- Darren Stults -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/opening_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/opening_day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="viewStart"
            android:textColor="@color/faded_orange"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/opening_instructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textColor="@color/dark_brown"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/label_id"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/opening_id"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/label_id"
            app:layout_constraintStart_toEndOf="@+id/label_id"
            app:layout_constraintTop_toTopOf="@+id/label_id" />

        <TextView
            android:id="@+id/label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_date"
            android:textColor="@color/dark_brown"
            app:layout_constraintStart_toEndOf="@+id/opening_id"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/opening_date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/label_date"
            app:layout_constraintStart_toEndOf="@+id/label_date"
            app:layout_constraintTop_toTopOf="@+id/label_date"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/label_time"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/label_times"
            android:textAlignment="viewEnd"
            android:textColor="@color/dark_brown"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/label_date"
            app:layout_constraintStart_toEndOf="@+id/label_date"
            app:layout_constraintTop_toBottomOf="@+id/label_date" />

        <TextView
            android:id="@+id/opening_time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_time"
            app:layout_constraintTop_toBottomOf="@+id/opening_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>